--- a/pages/debate/debate.html
+++ b/pages/debate/debate.html
@@ -57,8 +57,12 @@
                 use standardized tests for undergraduate admissions decisions.
               </p>
               <h6>
-                <a href="#" class="btn btn-primary">Download Case (.docx)</a
-                ><span class="ml-1 badge badge-warning">Checksum</span>
+                <a
+                  href="../../assets/debate/standardized/CollegeBoardOutfmymind.docx"
+                  class="btn btn-primary"
+                  >Download Case (.docx)</a
+                >
+                <a class="btn btn-warning px-1"><strong>?</strong></a>
               </h6>
             </div>
           </div>
@@ -70,13 +74,25 @@
                 Public Forum Beedev Meme Casefile
               </h5>
               <p class="card-text">
-                <strong>November-December 2018</strong>: Resolved: The United
-                States federal government should impose price controls on the
+                <strong>November-December 2018</strong>: The United States
+                federal government should impose price controls on the
                 pharmaceutical industry.
               </p>
               <h6>
-                <a href="#" class="btn btn-primary">Download Case (.docx)</a
-                ><span class="ml-1 badge badge-warning">Checksum</span>
+                <a
+                  href="../../assets/debate/standardized/CollegeBoardOutfmymind.docx"
+                  class="btn btn-primary"
+                  >Download Case (.docx)</a
+                >
+                <button
+                  type="button"
+                  class="btn btn-secondary"
+                  data-toggle="tooltip"
+                  data-placement="right"
+                  title="Tooltip on right"
+                >
+                  Tooltip on right
+                </button>
               </h6>
             </div>
           </div>
@@ -86,10 +102,10 @@
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="../../js/jquery-3.4.1.min.js"></script>
-    <script src="../../js/popper.min.js"></script>
+    <script src="../../js/jquery-3.4.1.js"></script>
+    <script src="../../js/popper.js"></script>
     <script
-      src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/jquery-3.4.1.slim.min.js"
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
       integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
       crossorigin="anonymous"
     ></script>
