--- a/pages/debate/debate.html
+++ b/pages/debate/debate.html
@@ -15,6 +15,21 @@
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
       crossorigin="anonymous"
     />
+    <script
+      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+      integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+      crossorigin="anonymous"
+    ></script>
 
     <!--other meta tags -->
     <link rel="stylesheet" type="text/css" href="cover.css" />
@@ -60,9 +75,15 @@
                 <a
                   href="../../assets/debate/standardized/CollegeBoardOutfmymind.docx"
                   class="btn btn-primary"
-                  >Download Case (.docx)</a
+                  >Download Case</a
                 >
-                <a class="btn btn-warning px-1"><strong>?</strong></a>
+                <a
+                  class="btn btn-warning px-1"
+                  rel="noopener noreferrer"
+                  href="../../assets/debate/standardized/checksum.txt"
+                  target="_blank"
+                  >Checksum</a
+                >
               </h6>
             </div>
           </div>
@@ -82,32 +103,21 @@
                 <a
                   href="../../assets/debate/standardized/CollegeBoardOutfmymind.docx"
                   class="btn btn-primary"
-                  >Download Case (.docx)</a
+                  >Download Case</a
                 >
-                <button
-                  type="button"
-                  class="btn btn-secondary"
-                  data-toggle="tooltip"
-                  data-placement="right"
-                  title="Tooltip on right"
+                <a
+                  class="btn btn-warning px-1"
+                  rel="noopener noreferrer"
+                  href="../../assets/debate/beedev/checksum.txt"
+                  target="_blank"
+                  >Checksum</a
                 >
-                  Tooltip on right
-                </button>
               </h6>
             </div>
           </div>
         </div>
       </div>
     </div>
-
     <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="../../js/jquery-3.4.1.js"></script>
-    <script src="../../js/popper.js"></script>
-    <script
-      src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-      crossorigin="anonymous"
-    ></script>
   </body>
 </html>
