Express JS, fixed config issue

--- a/source/pages/portfolio/portfolio.html
+++ b/source/pages/portfolio/portfolio.html
@@ -31,9 +31,7 @@
       integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
       crossorigin="anonymous"
     ></script>
-
     <!--other meta tags -->
-    <link rel="stylesheet" type="text/css" href="cover.css" />
     <title>SamBaumohl.com</title>
   </head>
   <body class="bg-dark">
@@ -59,7 +57,7 @@
         </li>
       </ul>
     </nav>
-    <h1 class="test-primary">Work in Progress</h1>
+    <h1 class="text-primary">Work in Progress</h1>
     <!-- Optional JavaScript -->
   </body>
 </html>
