--- a/source/pages/about/about.html
+++ b/source/pages/about/about.html
@@ -58,9 +58,9 @@
           via
           <a href="https://konpa.github.io/devicon/"
             >https://konpa.github.io/devicon/</a
-          >.
+          >. It's running on <a href="https://expressjs.com/">Express JS</a>.
         </p>
-        <h5 class="text-info">Website Version 0.8</h5>
+        <h5 class="text-info">Website Version 1.0</h5>
       </div>
     </div>
     <!-- Optional JavaScript -->
