--- a/source/pages/about/about.html
+++ b/source/pages/about/about.html
@@ -16,7 +16,24 @@
       crossorigin="anonymous"
     />
     <!--other meta tags -->
-    <title>SamBaumohl.com</title>
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="../../assets/icons/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="../../assets/icons/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="../../assets/icons/favicon-16x16.png"
+    />
+    <link rel="manifest" href="../../assets/icons/site.webmanifest" />
   </head>
   <body class="bg-dark">
     <nav
@@ -58,7 +75,7 @@
           via
           <a href="https://konpa.github.io/devicon/"
             >https://konpa.github.io/devicon/</a
-          >. It's running on <a href="https://expressjs.com/">Express JS</a>.
+          >. The site runs on <a href="https://expressjs.com/">Express JS</a>.
         </p>
         <h5 class="text-info">Website Version 1.0</h5>
       </div>
