--- a/source/pages/portfolio/portfolio.html
+++ b/source/pages/portfolio/portfolio.html
@@ -33,6 +33,24 @@
     ></script>
     <!--other meta tags -->
     <title>SamBaumohl.com</title>
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="../../assets/icons/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="../../assets/icons/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="../../assets/icons/favicon-16x16.png"
+    />
+    <link rel="manifest" href="../../assets/icons/site.webmanifest" />
   </head>
   <body class="bg-dark">
     <nav
@@ -57,7 +75,7 @@
         </li>
       </ul>
     </nav>
-    <h1 class="text-primary">Work in Progress</h1>
+    <h1 class="text-primary text-center">Work in Progress</h1>
     <!-- Optional JavaScript -->
   </body>
 </html>
