--- a/source/index.html
+++ b/source/index.html
@@ -16,6 +16,24 @@
       crossorigin="anonymous"
     />
     <!--other meta tags -->
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="assets/icons/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="assets/icons/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="assets/icons/favicon-16x16.png"
+    />
+    <link rel="manifest" href="assets/icons/site.webmanifest" />
     <title>SamBaumohl.com</title>
   </head>
   <body class="bg-dark">
