--- a/source/pages/about/about.html
+++ b/source/pages/about/about.html
@@ -16,6 +16,7 @@
       crossorigin="anonymous"
     />
     <!--other meta tags -->
+    <title>SamBaumohl.com</title>
     <link
       rel="apple-touch-icon"
       sizes="180x180"
