added sources, removed portfolio

--- a/source/pages/about/about.html
+++ b/source/pages/about/about.html
@@ -49,13 +49,10 @@
           <a class="nav-link" href="../resume/resume.html">Resume</a>
         </li>
         <li class="nav-item ml-4">
-          <a class="nav-link" href="../portfolio/portfolio.html">Portfolio</a>
-        </li>
-        <li class="nav-item ml-4">
           <a class="nav-link" href="../debate/debate.html">Debate (NSDA)</a>
         </li>
         <li class="nav-item active ml-4">
-          <a class="nav-link" href="#">About</a>
+          <a class="nav-link" href="../about/about.html">About</a>
         </li>
       </ul>
     </nav>
@@ -78,7 +75,7 @@
             >https://konpa.github.io/devicon/</a
           >. The site runs on <a href="https://expressjs.com/">Express JS</a>.
         </p>
-        <h5 class="text-info">Website Version 1.0</h5>
+        <h5 class="text-info">Website Version 1.1</h5>
       </div>
     </div>
     <!-- Optional JavaScript -->
