--- a/source/pages/debate/debate.html
+++ b/source/pages/debate/debate.html
@@ -48,9 +48,6 @@
         <li class="nav-item ml-4">
           <a class="nav-link" href="../resume/resume.html">Resume</a>
         </li>
-        <li class="nav-item ml-4">
-          <a class="nav-link" href="../portfolio/portfolio.html">Portfolio</a>
-        </li>
         <li class="nav-item active ml-4">
           <a class="nav-link" href="../debate/debate.html">Debate (NSDA)</a>
         </li>
@@ -59,7 +56,12 @@
         </li>
       </ul>
     </nav>
-    <h2 class="text-center pt-5 py-4 text-white">Debate Casefiles</h2>
+    <h2 class="text-center pt-5 pt-4 text-white">Debate Casefiles</h2>
+    <p class="text-center pt-0 text-light">
+      These casefiles are a mix of evidence I gathered and pre-annotated
+      evidence I found. I do not own any/all of the work in these files. These
+      are simply the casefiles I used in tournaments.
+    </p>
     <div class="container-fluid">
       <div class="row">
         <div class="col px-1 py-2">
