--- a/source/pages/resume/resume.html
+++ b/source/pages/resume/resume.html
@@ -15,7 +15,7 @@
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
       crossorigin="anonymous"
     />
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS, then fallbacks for each -->
     <script
       src="https://code.jquery.com/jquery-3.4.1.min.js"
       integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
@@ -31,6 +31,24 @@
       integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
       crossorigin="anonymous"
     ></script>
+    <script>
+      window.jQuery ||
+        document.write(
+          '<script src="../../assets/dependencies/jquery-3.4.1.min.js"><\/script>'
+        );
+    </script>
+    <script>
+      window.Popper ||
+        document.write(
+          '<script src="../../assets/dependencies/popper.min.js"><\/script>'
+        );
+    </script>
+    <script>
+      typeof $().emulateTransitionEnd == "function" ||
+        document.write(
+          '<script src="../../assets/dependencies/bootstrap.min.js"><\/script>'
+        );
+    </script>
     <!--other meta tags -->
     <link
       rel="apple-touch-icon"
