--- a/source/pages/portfolio/portfolio.html
+++ b/source/pages/portfolio/portfolio.html
@@ -15,6 +15,40 @@
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
       crossorigin="anonymous"
     />
+    <!-- jQuery first, then Popper.js, then Bootstrap JS, then fallbacks for each -->
+    <script
+      src="https://code.jquery.com/jquery-3.4.1.min.js"
+      integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+      integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+      crossorigin="anonymous"
+    ></script>
+    <script>
+      window.jQuery ||
+        document.write(
+          '<script src="../../assets/dependencies/jquery-3.4.1.min.js"><\/script>'
+        );
+    </script>
+    <script>
+      window.Popper ||
+        document.write(
+          '<script src="../../assets/dependencies/popper.min.js"><\/script>'
+        );
+    </script>
+    <script>
+      typeof $().emulateTransitionEnd == "function" ||
+        document.write(
+          '<script src="../../assets/dependencies/bootstrap.min.js"><\/script>'
+        );
+    </script>
     <!--other meta tags -->
     <title>SamBaumohl.com</title>
     <link
