--- a/source/pages/resume/resume.html
+++ b/source/pages/resume/resume.html
@@ -57,20 +57,33 @@
       class="navbar navbar-expand-sm navbar-dark"
       style="background-color: #242424;"
     >
-      <ul class="navbar-nav">
-        <li class="nav-item ml-4">
-          <a class="nav-link" href="../../index.html">Home</a>
-        </li>
-        <li class="nav-item active ml-4">
-          <a class="nav-link" href="../resume/resume.html">Resume</a>
-        </li>
-        <li class="nav-item ml-4">
-          <a class="nav-link" href="../debate/debate.html">Debate (NSDA)</a>
-        </li>
-        <li class="nav-item ml-4">
-          <a class="nav-link" href="../about/about.html">About</a>
-        </li>
-      </ul>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#navbarNavAltMarkup"
+        aria-controls="navbarNavAltMarkup"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <ul class="navbar-nav">
+          <li class="nav-item ml-4">
+            <a class="nav-link" href="../../index.html">Home</a>
+          </li>
+          <li class="nav-item ml-4 active">
+            <a class="nav-link" href="../resume/resume.html">Resume</a>
+          </li>
+          <li class="nav-item ml-4">
+            <a class="nav-link" href="../debate/debate.html">Debate (NSDA)</a>
+          </li>
+          <li class="nav-item ml-4">
+            <a class="nav-link" href="../about/about.html">About</a>
+          </li>
+        </ul>
+      </div>
     </nav>
     <div>
       <div
