Bells and Whistles

--- a/source/index.html
+++ b/source/index.html
@@ -194,5 +194,10 @@
       </div>
     </div>
     <!-- Optional JavaScript -->
+    <script type="text/javascript">
+      console.log(
+        "super secret link: https://www.sambaumohl.com/passwords/secret.html"
+      );
+    </script>
   </body>
 </html>
