--- a/source/pages/about/about.html
+++ b/source/pages/about/about.html
@@ -50,7 +50,7 @@
         );
     </script>
     <!--other meta tags -->
-    <title>SamBaumohl.com</title>
+    <title>About</title>
     <link
       rel="apple-touch-icon"
       sizes="180x180"
@@ -103,27 +103,30 @@
         </ul>
       </div>
     </nav>
-    <div class="container-fluid pt-4 pl-5" style="position:relative;">
-      <img
-        style="width: 10rem;"
-        src="../../assets/bootstrap/bootstrap-original.svg"
-        alt="Bootstrap"
-        class="d-inline-block"
-      />
-      <div class="d-inline-block pl-3" style="position:absolute;top:5;">
-        <p class="text-white">
-          This website was built by me using
-          <a href="https://getbootstrap.com/">Bootstrap 4</a>, which relies on
-          <a href="https://popper.js.org/">popper.js</a> and
-          <a href="https://jquery.com/">jquery</a>, and the icons were provided
-          via
-          <a href="https://konpa.github.io/devicon/"
-            >https://konpa.github.io/devicon/</a
-          >. The site runs on <a href="https://expressjs.com/">Express JS</a>.
-        </p>
-        <h5 class="text-info">Website Version 1.2</h5>
+    <div class="container mr-auto ml-0 mt-3">
+      <div class="row">
+        <div class="col col-auto">
+          <img
+            style="width: 10rem;"
+            src="../../assets/bootstrap/bootstrap-original.svg"
+            alt="Bootstrap"
+            class="d-inline-block "
+          />
+        </div>
+        <div class="col">
+          <p class="text-white">
+            This website was built by me using
+            <a href="https://getbootstrap.com/">Bootstrap 4</a>, which relies on
+            <a href="https://popper.js.org/">popper.js</a> and
+            <a href="https://jquery.com/">jquery</a>, and the icons were
+            provided via
+            <a href="https://konpa.github.io/devicon/"
+              >https://konpa.github.io/devicon/</a
+            >. The site runs on <a href="https://expressjs.com/">Express JS</a>.
+          </p>
+          <h5 class="text-info">Website Version 1.2</h5>
+        </div>
       </div>
     </div>
-    <!-- Optional JavaScript -->
   </body>
 </html>
