--- a/source/pages/debate/debate.html
+++ b/source/pages/debate/debate.html
@@ -50,7 +50,7 @@
         );
     </script>
     <!--other meta tags -->
-    <title>SamBaumohl.com</title>
+    <title>Debate (NSDA)</title>
     <link
       rel="apple-touch-icon"
       sizes="180x180"
@@ -168,6 +168,5 @@
         </div>
       </div>
     </div>
-    <!-- Optional JavaScript -->
   </body>
 </html>
