--- a/source/pages/resume/resume.html
+++ b/source/pages/resume/resume.html
@@ -68,7 +68,7 @@
       href="../../assets/icons/favicon-16x16.png"
     />
     <link rel="manifest" href="../../assets/icons/site.webmanifest" />
-    <title>SamBaumohl.com</title>
+    <title>Resume</title>
   </head>
   <body class="bg-dark">
     <nav
