--- a/source/pages/portfolio/portfolio.html
+++ b/source/pages/portfolio/portfolio.html
@@ -50,7 +50,7 @@
         );
     </script>
     <!--other meta tags -->
-    <title>SamBaumohl.com</title>
+    <title>Portfolio</title>
     <link
       rel="apple-touch-icon"
       sizes="180x180"
@@ -104,6 +104,5 @@
       </div>
     </nav>
     <h1 class="text-primary text-center">Work in Progress</h1>
-    <!-- Optional JavaScript -->
   </body>
 </html>
