--- a/source/pages/debate/debate.html
+++ b/source/pages/debate/debate.html
@@ -115,6 +115,34 @@
           <div class="card shadow-lg mx-auto" style="width: 19rem;">
             <div class="card-body">
               <h5 class="card-title">
+                Public Forum Beedev Meme Casefile
+              </h5>
+              <p class="card-text">
+                <strong>November-December 2018</strong>: The United States
+                federal government should impose price controls on the
+                pharmaceutical industry.
+              </p>
+              <h6>
+                <a
+                  href="../../assets/debate/beedev/beedev2.docx"
+                  class="btn btn-primary"
+                  >Download Case</a
+                >
+                <a
+                  class="btn btn-warning px-1"
+                  rel="noopener noreferrer"
+                  href="../../assets/debate/beedev/checksum.txt"
+                  target="_blank"
+                  >Checksum</a
+                >
+              </h6>
+            </div>
+          </div>
+        </div>
+        <div class="col px-1 py-2">
+          <div class="card shadow-lg mx-auto" style="width: 19rem;">
+            <div class="card-body">
+              <h5 class="card-title">
                 Lincoln-Douglas Casefile
               </h5>
               <p class="card-text">
@@ -142,23 +170,22 @@
           <div class="card shadow-lg mx-auto" style="width: 19rem;">
             <div class="card-body">
               <h5 class="card-title">
-                Public Forum Beedev Meme Casefile
+                Lincoln-Douglas Casefile
               </h5>
               <p class="card-text">
-                <strong>November-December 2018</strong>: The United States
-                federal government should impose price controls on the
-                pharmaceutical industry.
+                <strong>November-December 2019</strong>: The United States ought
+                to eliminate subsidies for fossil fuels.
               </p>
               <h6>
                 <a
-                  href="../../assets/debate/beedev/beedev2.docx"
+                  href="../../assets/debate/fossil-fuels/CoalBad.docx"
                   class="btn btn-primary"
                   >Download Case</a
                 >
                 <a
                   class="btn btn-warning px-1"
                   rel="noopener noreferrer"
-                  href="../../assets/debate/beedev/checksum.txt"
+                  href="../../assets/debate/fossil-fuels/checksum.txt"
                   target="_blank"
                   >Checksum</a
                 >
