--- a/source/pages/resume/resume.html
+++ b/source/pages/resume/resume.html
@@ -97,16 +97,13 @@
           <li class="nav-item ml-4">
             <a class="nav-link" href="../debate/debate.html">Debate (NSDA)</a>
           </li>
-          <li class="nav-item ml-4">
-            <a class="nav-link" href="../about/about.html">About</a>
-          </li>
         </ul>
       </div>
     </nav>
     <div>
       <div
         class="card mx-auto mt-5 mb-xs-3"
-        style="width: 25rem;"
+        style="max-width: 25rem;"
         id="loginCard"
       >
         <div class="card-body">
@@ -148,6 +145,11 @@
           </p>
           <a href="https://election.sambaumohl.com" class="btn btn-primary"
             >Go There</a
+          >
+          <a
+            class="btn btn-success"
+            href="https://github.com/MeMeBigProgrammer/trends-election-predictor"
+            >Github</a
           >
         </div>
       </div>
