new resume mechanic, cuts out server

--- a/source/index.html
+++ b/source/index.html
@@ -112,7 +112,7 @@
     </nav>
 
     <div
-      class="text-white parallax text-dark"
+      class="parallax text-dark"
       style="height: 25rem;display: flex;align-items: center;"
     >
       <div class="mx-auto">
@@ -126,7 +126,7 @@
     </div>
 
     <div class="text-black container-fluid bg-dark">
-      <h1 class="text-center font-weight-light text-light pt-3">Skills</h1>
+      <h1 class="text-center text-light pt-3">Skills</h1>
       <div class="row py-3">
         <div class="col pt-3">
           <div class="card mx-auto border-0" style="width: 14rem;">
@@ -301,22 +301,51 @@
       </div>
     </div>
 
-    <div class="container text-center mx-auto mt-0">
-      <p>
-        Copyright Sam Baumohl 2020. Using
-        <a href="https://getbootstrap.com/">Bootstrap 4</a>,
-        <a href="https://popper.js.org/">popper.js</a>,
-        <a href="https://jquery.com/">jquery</a>,
-        <a href="https://expressjs.com/">Express JS</a>, and the
-        <a href="https://konpa.github.io/devicon/">icons</a>.
-      </p>
-      <p class="text-info">Website Version 2.0</p>
+    <div class="mx-3 text-light" id="Portfolio">
+      <h1 class="text-center mt-3 mb-2">Projects</h1>
+      <div class="card border border-dark bg-dark">
+        <div class="card-body">
+          <h5 class="card-title">Google Trends Election Predictor</h5>
+          <p class="card-text">
+            Using Google Trends to predict the United States 2020 Presidential
+            Election.
+          </p>
+          <a href="https://election.sambaumohl.com" class="btn btn-primary"
+            >Go There</a
+          >
+          <a
+            class="btn btn-success"
+            href="https://github.com/MeMeBigProgrammer/trends-election-predictor"
+            >Github</a
+          >
+        </div>
+      </div>
     </div>
-    <!-- Optional JavaScript -->
-    <script type="text/javascript">
-      console.log(
-        "super secret link: https://www.sambaumohl.com/passwords/secret.html"
-      );
-    </script>
+
+    <div
+      class="text-center parallax"
+      style="display: flex;align-items: center;"
+    >
+      <div class="mx-auto">
+        <p>
+          Copyright Sam Baumohl 2020. Using
+          <a class="text-danger" href="https://getbootstrap.com/">Bootstrap 4</a
+          >, <a class="text-danger" href="https://popper.js.org/">popper.js</a>,
+          <a class="text-danger" href="https://jquery.com/">jquery</a>,
+          <a class="text-danger" href="https://expressjs.com/">Express JS</a>,
+          and the
+          <a class="text-danger" href="https://konpa.github.io/devicon/"
+            >icons</a
+          >.
+        </p>
+        <p class="text-info">Website Version 2.0</p>
+      </div>
+      <!-- Optional JavaScript -->
+      <script type="text/javascript">
+        console.log(
+          "super secret link: https://www.sambaumohl.com/passwords/secret.html"
+        );
+      </script>
+    </div>
   </body>
 </html>
